fix: title-language-selection not showing

--- a/src/components/header/button-laguange/button-language.scss
+++ b/src/components/header/button-laguange/button-language.scss
@@ -1,54 +1,51 @@
-$primaryColor : #fff;
-$secundaryColor : #000;
+$primaryColor: #fff;
+$secundaryColor: #000;
 
 * {
-    padding: 0;
-    margin: 0;
-    color: $primaryColor;
-    text-decoration: none;
-    border: none;
+  padding: 0;
+  margin: 0;
+  color: $primaryColor;
+  text-decoration: none;
+  border: none;
 }
 
 .menu-language {
-    cursor: pointer;
-    background-color: unset;
-    color: $primaryColor;
-    width: 100%;
-    height: 100%;
+  cursor: pointer;
+  background-color: unset;
+  color: $primaryColor;
+  width: 100%;
+  height: 100%;
 }
 
 .language-product-content {
-    display: none;
-    position: absolute;
-    width: 100vw;
-    height: 100vw;
-    background-color: red;
-    margin-top: 22px;
-    z-index: 2;
+  display: none;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: red;
+  margin-top: 22px;
+  z-index: 2;
+
+  &.show-content {
+    display: flex;
     right: 0;
-    padding: 100vw;
-    
-            &.show-content {
-                display: flex;
-                right: 0;
-                color: $secundaryColor;
-            }
+    color: $secundaryColor;
+  }
 
-    #language-selection {
-        width: 100vw;
-        height: 100vw;
+  #language-selection {
+    width: 100vw;
 
-        .box-texts-language {
-            display: flex;
-            width: 100vw;
-            height: 100vw;
+    .box-texts-language {
+      display: flex;
+      width: 100%;
+      margin-top: 200px;
+      padding: 0 20%;
 
-            .title-language-selection {
-                color: $secundaryColor;
-                font-size: 30px;
-                position: absolute;
-            }
-        }
-
+      .title-language-selection {
+        color: $secundaryColor;
+        font-size: 30px;
+        position: absolute;
+      }
     }
+  }
 }
